# pong

./: .gitmodules  CMakeLists.txt  run.bat
assets/: data.c
include/: ball.h  game.h  math_util.h  objective.h  particles.h  sound.h
src/: ball.c  ball.h  game.c  game.h  main.c  math_util.c  objective.c  objective.h  particles.c  player.c  player.h  sound.c
